# agiagentautomation

./: .dockerignore  .env.example  .gitignore  .mcp.json  .prettierignore  .prettierrc.json  .size-limit.json  .temp_delete_test-website-comprehensive.cjs  ACTIVATION_SUMMARY.md  ADD_COLUMN_VISUAL_METHOD.md  AGENTS.md  AGENTS_SDK_IMPLEMENTATION_SUMMARY.md  AGENT_SDK_IMPLEMENTATION_README.md  AGENT_SDK_README.md  AGI_AGENT_AUTOMATION_PRODUCT_PROOF_AUDIT.md  AGI_Chat_Interface_Technical_Audit_Report.md  AGI_REFACTOR_LOG.md  AI-INTEGRATION.md  AI_IMPLEMENTATION_GUIDE.md  AI_WORKFORCE_README.md  ALL_IMPORT_ERRORS_FIXED.md  ALTERNATIVE_IF_FIRST_FAILS.sql  API_PROXY_INVESTIGATION_REPORT.md  API_SETUP_GUIDE.md  ASSISTANT-TODO-LIST.md  AUDIT_COMPLETE.txt  AUDIT_DELIVERY_MANIFEST.md  AUDIT_ERROR_BOUNDARY_REPORT.md  AUDIT_FINDINGS_INDEX.md  AUDIT_REPORT.md  AUTH_FIX_SUMMARY.md  BACKEND_AUDIT_EXECUTIVE_SUMMARY.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_INFRASTRUCTURE_AUDIT_REPORT.md  BEFORE_AFTER.md  BILLING_TOKEN_AUDIT_REPORT.md  BUGS_FOUND_CHAT_VIBE.md  BUG_FIXES_SUMMARY.md  BUG_FIX_INDEX.md  BUG_HUNT_REPORT.md  (+477 more)
.agi/: QUICKSTART.md
.claude/: settings.local.json
.github/: dependabot.yml
.husky/: pre-commit
.logs/: code-smells.txt
Test_Results_2024-12-19/: test_report.md
audit-findings/: architecture-code-quality-audit.md  data-integrity-types-audit-report.md  feature-completeness-audit.md  infrastructure-functions-audit.md  team-1-security-revenue-audit.md
blogs/: BATCH-1-FOUNDATION-AUG11-SEP4-2025.md  BATCH-3-DESKTOP-AUTOMATION-SEP30-OCT24-2025.md  COMPLETE-96-DAY-BLOG-SERIES-AUG11-NOV14-2025.md  REWRITTEN-BATCH-2-AI-EMPLOYEES-SEP-5-29-2025.md  ai-employees-multi-agent-systems-sep-2025.md  aug-11-ai-employees-replace-100k-workers-2026.md  aug-12-plan-delegate-execute-pattern.md  aug-13-agi-automation-vs-chatgpt-claude.md  aug-14-file-based-employee-architecture.md  aug-15-zustand-state-multi-agent-collaboration.md  aug-16-multi-provider-llm-routing-architecture.md  oct-10-extended-context-1m-tokens.md  (+24 more)
windows-mcp-server/: .env.example  README.md  main.py  pyproject.toml
windows-mcp-server/src/windows_mcp_server/: __init__.py  logging.py  main.py  server.py
windows-mcp-server/src/windows_mcp_server/config/: __init__.py  settings.py
windows-mcp-server/src/windows_mcp_server/protocol/: __init__.py  handler.py  models.py
windows-mcp-server/src/windows_mcp_server/security/: __init__.py  auth.py  rate_limiter.py  sandbox.py
windows-mcp-server/src/windows_mcp_server/tools/: __init__.py  base.py  clipboard.py  filesystem.py  process.py  registry.py  system.py  window.py  windows_registry.py
windows-mcp-server/tests/: __init__.py  conftest.py  test_protocol.py  test_security.py  test_server.py  test_tools.py
(+1852 files in other folders)
